# girona500

./: .gitignore  stack.xml
cola2_lib/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  manifest.xml
cola2_lib/include/cola2_lib/: cola2_util.h
cola2_lib/lib/: cola2_lib.py
control_g500/: CMakeLists.txt  manifest.xml
control_g500/config/: joy.yaml  joy_pose.yaml  joy_vel.yaml  pilot.yaml  pose_controller_sim.yaml  rl_power.yaml  thruster_allocator_sim.yaml  velocity_controller_sim.yaml
control_g500/include/: cola2_lib.py
control_g500/launch/: control_g500.launch  start_g500.launch  start_g500_arnau.launch  start_rl_arnau.launch
control_g500/msg/: ThrustersData.msg
control_g500/src/control_g500/msg/: _ThrustersData.py  __init__.py
control_g500/src/nodes/: arm_controller_sim.py  captain.py  keyboard_vel.cpp  logitech_f510_joystick.py  merge_bvr.py  move_mode.py  pilot.py  rl_algorithm.py  rl_archer.py  rl_power.py  teleoperation.cpp  teleoperation_vel.cpp  thruster_allocator.py  velocity_controller.py  visual_servoing.py
launch/: mission_default.yaml  start_g500-sim.launch
navigation_g500/: CMakeLists.txt  manifest.xml
navigation_g500/config/: dynamics_odin.yaml  localization.yaml  navigator.yaml
navigation_g500/msg/: FastraxIt500Gps.msg
navigation_g500/src/nodes/: dynamics.py  ekf_g500.py  localization.py  navigator.py
safety_g500/: CMakeLists.txt  manifest.xml
safety_g500/config/: ocean_server_batteries.yaml  safety_g500.yaml
safety_g500/launch/: safety_g500.launch
safety_g500/msg/: BatteryLevel.msg  InternalSensors.msg  MissionStatus.msg  NavSensorsStatus.msg  VehicleStatus.msg
safety_g500/src/FirmwareROS/: FirmwareROS.ino
safety_g500/src/nodes/: safety_g500.py  (+2 more)
safety_g500/srv/: DigitalOutput.srv  MissionTimeout.srv
underwater_vehicle_dynamics/config/: dynamics_odin.yaml
underwater_vehicle_dynamics/msg/: TritechIGCGyro.msg  ValeportSoundVelocity.msg
underwater_vehicle_dynamics/src/: dynamics.py
(+16 files in other folders)
