cmake_minimum_required(VERSION 2.4.6)
include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)

# Set the build type.  Options are:
#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
#  Debug          : w/ debug symbols, w/o optimization
#  Release        : w/o debug symbols, w/ optimization
#  RelWithDebInfo : w/ debug symbols, w/ optimization
#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
#set(ROS_BUILD_TYPE RelWithDebInfo)

rosbuild_init()

#set the default path for built executables to the "bin" directory
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
#set the default path for built libraries to the "lib" directory
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

#uncomment if you have defined messages
rosbuild_genmsg()
#uncomment if you have defined services
#rosbuild_gensrv()


#To use Eigen
#find_package(Eigen REQUIRED)
#include_directories(${EIGEN_INCLUDE_DIRS})
find_package(Boost REQUIRED system regex)


#common commands for building c++ executables and libraries
#rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
#target_link_libraries(${PROJECT_NAME} another_library)
#rosbuild_add_boost_directories()
#rosbuild_link_boost(${PROJECT_NAME} thread)
#rosbuild_add_executable(example examples/example.cpp)
#target_link_libraries(example ${PROJECT_NAME})

#rosbuild_add_executable(teleoperation_pose src/nodes/teleoperation_pose.cpp)
#target_link_libraries(teleoperation_pose ${Boost_LIBRARIES})
rosbuild_add_executable(teleoperation src/nodes/teleoperation.cpp)
target_link_libraries(teleoperation ${Boost_LIBRARIES})


#rosbuild_add_executable(ps3_joystick src/nodes/ps3_joystick.cpp)
#rosbuild_add_executable(wingman_joystick src/nodes/wingman_joystick.cpp)

#rosbuild_add_executable(keyboard_pose src/nodes/keyboard_pose.cpp)
rosbuild_add_executable(keyboard src/nodes/keyboard.cpp)


